tdf#122091 OOXML Import: Automatically break of X Axis labels

Set the TextBreak value automatically true, only if the X axis labels
rotation is 0 degree. The MS Office using a similar method because
there is no any XML tag in the OOXML standard which refer to this setting.

Change-Id: Ie84a95935f0d5c4c1f9a30803e22572141385960