oox/inc/drawingml/chart/objectformatter.hxx
@@ -144,6 +144,11 @@ public:
     /** Returns true, if the passed shape properties have automatic fill mode. */
     static bool         isAutomaticFill( const ModelRef< Shape >& rxShapeProp );
 
+    /** Returns true, if the X Axis label rotation is 0 degree. */
+    static bool         getTextRotation(
+                            const ModelRef< TextBody >& rxTextProp,
+                            sal_Int32 nDefaultRotation = 0 );
+
 private:
     std::shared_ptr< ObjectFormatterData > mxData;
 };
