oox/source/drawingml/chart/axisconverter.cxx
@@ -260,8 +260,8 @@ void AxisConverter::convertFromModel(
                 {
                     // do not overlap text unless all labels are visible
                     aAxisProp.setProperty( PROP_TextOverlap, mrModel.mnTickLabelSkip == 1 );
-                    // do not break text into several lines
-                    aAxisProp.setProperty( PROP_TextBreak, false );
+                    // do not break text into several lines unless the rotation is 0 degree
+                    aAxisProp.setProperty( PROP_TextBreak, ObjectFormatter::getTextRotation( mrModel.mxTextProp ) );
                     // do not stagger labels in two lines
                     aAxisProp.setProperty( PROP_ArrangeOrder, cssc::ChartAxisArrangeOrderType_SIDE_BY_SIDE );
                     //! TODO #i58731# show n-th category
